[package]
name = "local_server"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "controller"
path = "bin/controller.rs"

[dependencies]
actix = "0.13.0"
actix-rt = "2.8.0"
actix-testing = "1.0.1"
log = "0.4.0"
async-std = "1.12.0"
env_logger = "0.10.0"
mockall = "0.11.4"
mockall_double = "0.3.0"
tokio = {version = "1.17.0", features = ["full"]}
